--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_CaseLogInput.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_CaseLogInput.cshtml
@@ -734,6 +734,16 @@ Model.EnableTwoAttachments))
         }
     });
 
+    $(document).ready(function () {
+        let data = $('#CaseLog_TextInternal').text();
+        let isInvalidPerformer = (data == '' || data == null || data == undefined || obj == @SessionFacade.CurrentUser.Id);
+        $('#CaseLog_SendMailAboutCaseToPerformer').attr('disabled', isInvalidPerformer);
+
+        if (isInvalidPerformer) {
+            $('#CaseLog_SendMailAboutCaseToPerformer').attr('checked', false);
+        }
+    });
+
 </script>
 
 
