#209937 Internal lognote to administrator

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_CaseLogInput.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_CaseLogInput.cshtml
@@ -735,8 +735,10 @@ Model.EnableTwoAttachments))
     });
 
     $(document).ready(function () {
-        let data = $('#CaseLog_TextInternal').text();
-        let isInvalidPerformer = (data == '' || data == null || data == undefined || obj == @SessionFacade.CurrentUser.Id);
+        
+        let performerId = $("#Performer_Id").val();
+
+        let isInvalidPerformer = (performerId == @SessionFacade.CurrentUser.Id || performerId == "");
         $('#CaseLog_SendMailAboutCaseToPerformer').attr('disabled', isInvalidPerformer);
 
         if (isInvalidPerformer) {
