--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_CaseLogInput.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_CaseLogInput.cshtml
@@ -124,7 +124,7 @@
                         }
                     </td>
                     <td>
-                        <div class="checkbox commun">
+                        <div class="checkbox commun case-external-email">
                             @if (Model.Disable_SendMailAboutCaseToNotifier || Model.EditMode == AccessMode.ReadOnly)
                             {
                                 @Html.CheckBoxFor(model => model.CaseLog.SendMailAboutCaseToNotifier,
@@ -136,10 +136,10 @@
                                     new { InformNotifierBehavior = Model.InformNotifierBehavior.ToJavaScriptBool() })
                             }
                             <span class="lbl">@Translation.GetCoreTextTranslation("Informera anmälare och följare om åtgärder") </span><br />
-                            @*<span id="emailsToTitle" style="display: none;">
-                                @Translation.ToTitleCase(@Translation.GetCoreTextTranslation("Till")): </span><span id="emailsTo" style="display: none;">@Html.DisplayFor(model => model.case_.PersonsEmail)</span><br />
-
-                                <span id="ccTitle" style="display: none;">@Translation.GetCoreTextTranslation("Kopia"): </span><span id="extraEmailsInputShow" style="overflow-wrap: break-word"></span>*@
+                            <span id="emailsToTitle" style="display: none;">
+                                @Translation.ToTitleCase(@Translation.GetCoreTextTranslation("Till")):
+                            </span><span id="emailsTo" style="display: none;">@Html.DisplayFor(model => model.case_.PersonsEmail)</span><br />
+                            <span id="ccTitle" style="display: none;">@Translation.GetCoreTextTranslation("Kopia"): </span><span id="extraEmailsInputShow" style="overflow-wrap: break-word"></span>
                         </div>
                         @Html.HiddenFor(model => model.CaseLog.RegUser)
                         @Html.HiddenFor(model => model.CaseLog.LogType)
@@ -665,6 +665,7 @@ Model.EnableTwoAttachments))
         e.preventDefault();
         $(this).parents(".section-block").removeClass("hideshow");
     });
+    //casePersonsEmail
 
     $("#Performer_Id").on("change", async function (e) {
 
