--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/Edit.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/Edit.cshtml
@@ -256,13 +256,24 @@
                                                 @Translation.GetCoreTextTranslation("Markera ärendet som oläst")
                                             </a>
                                         </li>
-                                        @if (!Model.IsItChildCase() && SessionFacade.CurrentUser.CreateSubCasePermission == 1)
+                                        @if (!Model.IsItChildCase() && SessionFacade.CurrentUser.CreateSubCasePermission == 1 && !Model.IsItMerged())
                                         {
                                             <li>@Html.ActionLink(Translation.GetCoreTextTranslation("Skapa underärende"), "NewChildCase", new { parentCaseId = Model.case_.Id })</li>
                                             if (!Model.IsItParentCase())
                                             {
                                                 <li><a data-toggle="modal" id="case_connect_to_parent_btn" href="#">@Translation.GetCoreTextTranslation("Koppla till huvudärende")</a></li>
                                                 @Html.HiddenFor(m => m.case_.Id, new { @id = "connect_to_parent_childId" })
+                                            }
+                                        }
+                                        @if (!Model.IsItMerged() && SessionFacade.CurrentUser.CreateSubCasePermission == 1 && !Model.IsItChildCase() && !Model.IsItParentCase())
+                                        {
+                                            @*<li>@Html.ActionLink(Translation.GetCoreTextTranslation("Sammanfoga"), "MergeCase", new { parentCaseId = Model.case_.Id })</li>*@
+                                            var merged = Model.IsItMerged();
+                                            if (!Model.IsItMerged())
+                                            {
+                                                <li><a data-toggle="modal" id="merge_case_to_parent" href="#">@Translation.GetCoreTextTranslation("Sammanfoga")</a></li>
+                                                @Html.HiddenFor(m => m.case_.Id, new { @id = "merge_to_parent" })
+                                                <input type="hidden" id="tomerge" name="tomerge" value="false"/>
                                             }
                                         }
                                         @if (SessionFacade.CurrentUser.ActivateCasePermission == 1 && Model.case_.FinishingDate.HasValue && (!Model.IsItChildCase() || (Model.IsItChildCase() && !Model.ParentCaseInfo.IsCaseClosed)))
