--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_ChildCases.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Cases/_ChildCases.cshtml
@@ -16,26 +16,37 @@
                 <th>@Translation.CaseString(OtherFields.SubState)</th>
                 <th>@Translation.CaseString(LogFields.FinishingDate)</th>
                 <th>@Translation.CaseString(OtherFields.Priority)</th>
-                <th>@Translation.GetCoreTextTranslation("Koppla från")</th>
-            </tr>
+                @if(Model.RelationType != true)
+                {
+                    <th>@Translation.GetCoreTextTranslation("Koppla från")</th>
+                }
+                
+                </tr>
         </thead>
         <tbody>
             @foreach (var childCase in Model.ChildCaseList)
             {
                 var backUrl = Url.Action("Edit", new {childCase.ParentId}) + "#childcases-tab";
-                <tr>
-                    <td><a href="@Url.Action("Edit", new { childCase.Id, backUrl })">@Html.ImgForCase(childCase)</a></td>
-                    <td><a href="@Url.Action("Edit", new { childCase.Id, backUrl })">@childCase.CaseNo.ToString()</a></td>
-                    <td><a href="@Url.Action("Edit", new { childCase.Id, backUrl })">@Html.FormaDate(childCase.RegistrationDate, Model.Formatter)</a></td>
-                    <td><a href="@Url.Action("Edit", new { childCase.Id, backUrl })">@childCase.Subject</a></td>
-                    <td><a href="@Url.Action("Edit", new { childCase.Id, backUrl })">@childCase.CaseType</a></td>
-                    <td><a href="@Url.Action("Edit", new { childCase.Id, backUrl })">@Html.FormatUserName(childCase.CasePerformer , Model.Formatter)</a></td>
-                    <td><a href="@Url.Action("Edit", new { childCase.Id, backUrl })">@childCase.SubStatus</a></td>
-                    <td><a href="@Url.Action("Edit", new { childCase.Id, backUrl })">@Html.FormaDate(childCase.ClosingDate, Model.Formatter)</a></td>
-                    <td><a href="@Url.Action("Edit", new { childCase.Id, backUrl })">@childCase.Priority</a></td>
-                    <td><a title="@Translation.GetCoreTextTranslation("Koppla från moder")" href="@Url.Action("RemoveChild", new {childCase.Id, childCase.ParentId})">
+            <tr>
+                <td><a href="@Url.Action("Edit", new { childCase.Id, backUrl })">@Html.ImgForCase(childCase)</a></td>
+                <td><a href="@Url.Action("Edit", new { childCase.Id, backUrl })">@childCase.CaseNo.ToString()</a></td>
+                <td><a href="@Url.Action("Edit", new { childCase.Id, backUrl })">@Html.FormaDate(childCase.RegistrationDate, Model.Formatter)</a></td>
+                <td><a href="@Url.Action("Edit", new { childCase.Id, backUrl })">@childCase.Subject</a></td>
+                <td><a href="@Url.Action("Edit", new { childCase.Id, backUrl })">@childCase.CaseType</a></td>
+                <td><a href="@Url.Action("Edit", new { childCase.Id, backUrl })">@Html.FormatUserName(childCase.CasePerformer, Model.Formatter)</a></td>
+                <td><a href="@Url.Action("Edit", new { childCase.Id, backUrl })">@childCase.SubStatus</a></td>
+                <td><a href="@Url.Action("Edit", new { childCase.Id, backUrl })">@Html.FormaDate(childCase.ClosingDate, Model.Formatter)</a></td>
+                <td><a href="@Url.Action("Edit", new { childCase.Id, backUrl })">@childCase.Priority</a></td>
+
+                @if (childCase.RelationType != true)
+                {
+                    <td>
+                        <a title="@Translation.GetCoreTextTranslation("Koppla från moder")" href="@Url.Action("RemoveChild", new {childCase.Id, childCase.ParentId})">
                             <i class="icon-remove"></i>
-                    </a></td>
+                        </a>
+                    </td>
+                  }
+                    
                 </tr>
             }
         </tbody>
