--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/CaseSolution/NewCategory.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/CaseSolution/NewCategory.cshtml
@@ -1,5 +1,5 @@
 ﻿@using DH.Helpdesk.Web.Infrastructure
-@model DH.Helpdesk.Domain.CaseSolutionCategory
+@model DH.Helpdesk.Web.Models.CaseSolution.CaseSolutionCategoryViewModel
 @{
     ViewBag.Title = "NewCategory";
 }
